completed user activation
